--- a/iOS9-NewAPI-3DTouch-QuickActions-Example/Info.plist
+++ b/iOS9-NewAPI-3DTouch-QuickActions-Example/Info.plist
@@ -22,6 +22,43 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIApplicationShortcutItems</key>
+	<array>
+		<dict>
+			<key>UIApplicationShortcutItemIconType</key>
+			<string>UIApplicationShortcutIconTypeAdd</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Home</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>quickactions.sweefties.home</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>videow</string>
+			<key>UIApplicationShortcutItemSubtitle</key>
+			<string>Launch video..</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Movies</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>quickactions.sweefties.movies</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconType</key>
+			<string>UIApplicationShortcutIconTypeShare</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Share</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>quickactions.sweefties.share</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconType</key>
+			<string>UIApplicationShortcutIconTypeCompose</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Message</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>quickactions.sweefties.message</string>
+		</dict>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
